; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_bmac.c_reset_and_select_srom.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_bmac.c_reset_and_select_srom.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }

@SROMCSR = common dso_local global i32 0, align 4
@DelayValue = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.net_device*)* @reset_and_select_srom to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @reset_and_select_srom(%struct.net_device* %0) #0 {
  %2 = alloca %struct.net_device*, align 8
  store %struct.net_device* %0, %struct.net_device** %2, align 8
  %3 = load %struct.net_device*, %struct.net_device** %2, align 8
  %4 = load i32, i32* @SROMCSR, align 4
  %5 = call i32 @bmwrite(%struct.net_device* %3, i32 %4, i32 0)
  %6 = load i32, i32* @DelayValue, align 4
  %7 = call i32 @udelay(i32 %6)
  %8 = load %struct.net_device*, %struct.net_device** %2, align 8
  %9 = call i32 @bmac_clock_in_bit(%struct.net_device* %8, i32 1)
  %10 = load %struct.net_device*, %struct.net_device** %2, align 8
  %11 = call i32 @bmac_clock_in_bit(%struct.net_device* %10, i32 1)
  %12 = load %struct.net_device*, %struct.net_device** %2, align 8
  %13 = call i32 @bmac_clock_in_bit(%struct.net_device* %12, i32 0)
  ret void
}

declare dso_local i32 @bmwrite(%struct.net_device*, i32, i32) #1

declare dso_local i32 @udelay(i32) #1

declare dso_local i32 @bmac_clock_in_bit(%struct.net_device*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
